@@ -41,8 +41,7 @@ public class Dish {
                 '}';
     }
 
-    public static final List<Dish> menu =
-            Arrays.asList(
+    public static final List<Dish> menu = List.of(
                     new Dish("pork", false, 800, DishType.MEAT),
                     new Dish("beef", false, 700, DishType.MEAT),
                     new Dish("chicken", false, 400, DishType.MEAT),
